# Polet-AI

./: .gitignore  AGENTS.md  README.md  docker-compose.yaml  ralph-once.sh
.claude/: settings.json
contract/: Anchor.toml
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: confidential_policy.rs  constants.rs  encrypt_policy_graph.rs  encrypt_prealpha.rs  error.rs  execution_payload.rs  ika_approval.rs  lib.rs  state.rs
contract/programs/contract/tests/: confidential.rs  custody_trade_execution.rs  demo_custody.rs  encrypt_harness_compatibility.rs  ika_approval.rs  initialize.rs  policy.rs  recovery.rs  scoped_policy.rs  session.rs  test_initialize.rs  usdc_transfer.rs
contract/programs/contract/tests/common/: mod.rs
contract/programs/mock_ika/: Cargo.toml
contract/programs/mock_ika/src/: lib.rs
docs/: GRILL-SESSION.md  PRD-PRODUCTION.md  PRD.md  PROMPT.md  agent-runtime.md  bridgeless-order-message.md  demo-script.md  encrypt-devnet-e2e-runbook.md  encrypt-installation.md  hermes-quickstart.md  ika-devnet-smoke-runbook.md  ika-dwallet-prealpha-alignment.md  ika-encrypt-integration-book.md  ika-introduction.md  jupiter-dx-notes.md  jupiter-dx-report.md  landing-upgrade-compass.md  landing-v2-compass.md  milestones.md  passkey-coapproval-prototype.md  prd.md  progress.txt  recovery.md
frontend/: .cta.json  .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend-v2/: package.json  playwright.config.ts  tsconfig.json  vite.config.ts
proxy/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check_446.txt  check_devnet_sol.cjs  check_devnet_usdc.cjs  check_mint.cjs  debug-wallet.mjs  final_typecheck.txt  full_errors.txt  (+3 more)
(+504 files in other folders)
